--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -86,24 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "أمريكا الجنوبية\n",
-      "Südamerika\n",
-      "South America\n",
-      "América del Sur\n",
-      "Южная Америка\n",
-      "南美洲\n"
+      "القارة القطبية الجنوبية\n",
+      "Antarktika\n",
+      "Antarctica\n",
+      "Antártida\n",
+      "Антарктида\n",
+      "南极洲\n"
      ]
     }
    ],
    "source": [
-    "eid = 'Q18'\n",
+    "eid = 'Q51'\n",
     "\n",
     "for code in codes:\n",
     "    codex = Codex(code=code)\n",
@@ -112,19 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From https://en.wikipedia.org/wiki/South_America:\n",
-      "  \"South America  is a continent in the Western Hemisphere, mostly in the Southern Hemisphere, with a relatively small portion in the Northern Hemisphere. It may also be considered a subcontinent of the Americas, which is how it is viewed in most of Europe and the Spanish and Portuguese-speaking regions of the Americas. The reference to South America instead of other regions (like Latin America or the Southern Cone) has increased in the last decades due to changing geopolitical dynamics (in particular, the rise of Brazil).It is bordered on the west by the Pacific Ocean and on the north and east by the Atlantic Ocean; North America and the Caribbean Sea lie to the northwest. It includes twelve sovereign states: Argentina, Bolivia, Brazil, Chile, Colombia, Ecuador, Guyana, Paraguay, Peru, Suriname, Uruguay, Venezuela, and French Guiana (a part of France). In addition, the ABC islands of the Kingdom of the Netherlands, the Falkland Islands, (a British Overseas Territory), Trinidad and Tobago, and Panama may also be considered part of South America. \n",
-      "South America has an area of 17,840,000 square kilometers (6,890,000 sq mi). Its population as of 2018 has been estimated at more than 423 million. South America ranks fourth in area (after Asia, Africa, and North America) and fifth in population (after Asia, Africa, Europe, and North America). Brazil is by far the most populous South American country, with more than half of the continent's population, followed by Colombia, Argentina, Venezuela and Peru. In recent decades Brazil has also concentrated half of the region's GDP and has become a first regional power.Most of the population lives near the continent's western or eastern coasts while the interior and the far south are sparsely populated. The geography of western South America is dominated by the Andes mountains; in contrast, the eastern part contains both highland regions and vast lowlands where rivers such as the Amazon, Orinoco, and Paraná flow. Most of the continent lies in the tropics.\n",
-      "The continent's cultural and ethnic outlook has its origin with the interaction of indigenous peoples with European conquerors and immigrants and, more locally, with African slaves. Given a long history of colonialism, the overwhelming majority of South Americans speak Portuguese or Spanish, and societies and states reflect Western traditions.\n",
-      "\n",
-      "\"\n"
+      "From https://en.wikipedia.org/wiki/Antarctica:\n",
+      "  \"Antarctica ( or  (listen)) is Earth's southernmost continent. It contains the geographic South Pole and is situated in the Antarctic region of the Southern Hemisphere, almost entirely south of the Antarctic Circle, and is surrounded by the Southern Ocean. At 14,200,000 square kilometres (5,500,000 square miles), it is the fifth-largest continent and nearly twice the size of Australia. At 0.00008 people per square kilometre, it is by far the least densely populated continent. About 98% of Antarctica is covered by ice that averages 1.9 km (1.2 mi; 6,200 ft) in thickness, which extends to all but the northernmost reaches of the Antarctic Peninsula.\n",
+      "Antarctica, on average, is the coldest, driest, and windiest continent, and has the highest average elevation of all the continents. Most of Antarctica is a polar desert, with annual precipitation of 200 mm (7.9 in) along the coast and far less inland; there has been no rain there for almost 2 million years, yet 80% of the world freshwater reserves are stored there, enough to raise global sea levels by about 60 m (100 ft) if all of it were to melt. The temperature in Antarctica has reached −89.2 °C (−128.6 °F) (or even −94.7 °C (−135.8 °F) as measured from space), though the average for the third quarter (the coldest part of the year) is −63 °C (−81 °F). Anywhere from 1,000 to 5,000 people reside throughout the year at research stations scattered across the continent. Organisms native to Antarctica include many types of algae, bacteria, fungi, plants, protista, and certain animals, such as mites, nematodes, penguins, seals and tardigrades. Vegetation, where it occurs, is tundra.\n",
+      "Antarctica is noted as the last region on Earth in recorded history to be discovered, unseen until 1820 when the Russian expedition of Fabian Gottlieb von Bellingshausen and Mikhail Lazarev on Vostok and Mirny sighted the Fimbul ice shelf. The continent, however, remained largely neglected for the rest of the 19th century because of its hostile environment, lack of easily accessible resources, and isolation. In 1895, the first confirmed landing was conducted by a team of Norwegians. Antarctica's buried active volcanoes weren't discovered until 2013.Antarctica is a de facto condominium, governed by parties to the Antarctic Treaty System that have consulting status. Twelve countries signed the Antarctic Treaty in 1959, and thirty-eight have signed it since then. The treaty prohibits military activities and mineral mining, prohibits nuclear explosions and nuclear waste disposal, supports scientific research, and protects the continent's ecozone. Ongoing experiments are conducted by more than 4,000 scientists from many nations.\"\n"
      ]
     }
    ],
@@ -136,20 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "From https://es.wikipedia.org/wiki/Am%C3%A9rica_del_Sur:\n",
-      "  \"América del Sur, Sudamérica o Suramérica[10]​ (también llamada América Meridional, América del Mediodía, América Austral o Continente Meridional) es el subcontinente austral de América, o también considerado por muchos uno de los continentes que conforman el supercontinente América.[11]​ Está atravesada por la línea ecuatorial en su extremo norte, quedando así con la mayor parte de su territorio comprendida dentro del hemisferio sur. \n",
-      "Está situada entre el océano Atlántico y el océano Pacífico quienes delimitan los extremos Este y Oeste respectivamente, mientras que el mar Caribe delimita por el norte y el océano Antártico su extremo sur. Está conectada con América del Norte por el estrecho puente territorial que representa América Central. América del Sur es la zona terrestre más próxima a la Antártida a través del pasaje de Drake al sur. Ocupa una superficie de 18,2 millones de km², lo que representa un 42,9 % del continente americano y un 13,0 % de las tierras emergidas,[12]​ y está habitada por el 6,5 % de la población mundial.[13]​\n",
-      "América del Sur está conformada por un conjunto de trece países soberanos: Argentina, Bolivia, Brasil, Chile, Colombia, Ecuador, Guyana, Paraguay, Perú, Surinam, Uruguay y Venezuela, además de Francia con la Guayana Francesa[14]​ y cinco dependencias de otros estados. Brasil concentra aproximadamente la mitad de la población y la producción económica de la región.[15]​ Los países que bordean el mar Caribe —Colombia, Venezuela, aunque se suele incluir a Trinidad y Tobago (por encontrarse sobre la plataforma continental), Guyana, Surinam, también la Guayana Francesa, que es un departamento de ultramar de Francia, Aruba, Curazao y la isla de Bonaire pertenecientes al Reino de los Países Bajos— se conocen en conjunto como el Caribe sudamericano, mientras que Argentina, Chile, Paraguay, Uruguay y el sur de Brasil, forman el Cono Sur, una región del subcontinente que se caracteriza por los más altos estándares de calidad de vida y desarrollo en relación al resto de Latinoamérica.[16]​[17]​[18]​[19]​ Colombia y Venezuela, además de estar en la región Caribe, pertenecen también junto a Bolivia, Chile, Ecuador y Perú a la zona andina.\n",
-      "Desde el siglo XVI hasta principios del siglo XIX la mayor parte de América del Sur estaba dividida en colonias gobernadas, mayoritariamente, por España y Portugal, seguidas por una colonia del Reino Unido, una de Francia y otra de los Países Bajos las cuales se fueron convirtiendo en Repúblicas, con la excepción de la Guayana Francesa convertida en Departamento de Ultramar francés (Región Ultraperiférica Europea) y las Islas Malvinas e islas vecinas. Si bien, el límite actual de América del Sur con América Central se ubica en una línea imaginaria en la selva del Darién, fue a partir de la construcción del canal de Panamá que se empieza a asociar a este país con América Central en medios anglosajones. Finalmente en el año 1955, Panamá pasa a formar parte de América Central geográficamente, pero mantiene lazos históricos y culturales con América del Sur.[20]​[21]​\n",
-      "\n",
-      "\"\n"
+      "From https://es.wikipedia.org/wiki/Ant%C3%A1rtida:\n",
+      "  \"La Antártida[2]​ o continente antártico (del adjetivo latino antarcticus, y este a su vez del griego ανταρκτικός antarktikós, ‘opuesto al Ártico’),[2]​ también denominada Antártica en Chile,[2]​ es el continente más austral de la Tierra. Está situada completamente en el hemisferio sur, casi enteramente al sur del círculo polar antártico y está rodeada por el océano Antártico. Contiene el polo sur geográfico, por lo que de manera coloquial y por extensión también es conocida de manera errónea como el polo sur. Con 14 000 000 km², es el cuarto continente más grande después de Asia, América y África.[1]​ En comparación con Oceanía, la Antártida es casi dos veces su tamaño. Alrededor del 98 % de la Antártida está cubierta de hielo, que tiene un promedio de 1,9 km de espesor,[3]​ que se extiende a todos los puertos, excepto a los más septentrionales de la península Antártica.\n",
+      "La Antártida, de promedio, es el continente más frío, seco y ventoso, y tiene la altitud media más alta de todos los continentes.[4]​ La Antártida es un desierto, con precipitaciones anuales de solo 200 mm en la zona costera y mucho menos tierra adentro.[5]​ La temperatura en la Antártida ha alcanzado los -89,2 °C, aunque la media del tercer trimestre (la parte más fría del año) es de -63 °C. Hacia 2016, había alrededor de 135 residentes permanentes, pero en las estaciones de investigación dispersas en todo el continente residen entre 1000 y 5000 personas durante todo el año. Los organismos nativos de la Antártida incluyen muchos tipos de algas, bacterias, hongos, plantas, protistas, y ciertos animales, tales como ácaros, nematodos, pingüinos, pinnípedos y tardígrados. El tipo de vegetación que se presenta en algunas zonas reducidas es la tundra.\n",
+      "A pesar de los mitos y las especulaciones sobre la Terra Australis Ignota («la tierra desconocida del sur») que se remontan a la antigüedad, la Antártida fue la última región de la Tierra en ser descubierta y/o colonizada por los humanos, siendo avistada por primera vez en el verano austral de 1603 por el navegante español Gabriel de Castilla. Posteriormente, en 1820, fue avistada por los exploradores rusos Fabian Gottlieb von Bellingshausen y Mijaíl Lázarev en el Vostok y Mirni, que descubrieron la barrera de hielo Fimbul. El continente, sin embargo, permaneció inexplorado casi todo el siglo XIX debido a su ambiente hostil y al aislamiento. En 1895, el primer desembarco confirmado fue dirigido por un grupo noruego.\n",
+      "La Antártida es de facto un condominio, que se rige por el Tratado Antártico que tiene estatus de consultoría. Doce países firmaron el Tratado Antártico en 1959 y treinta y ocho lo han firmado desde entonces. El tratado prohíbe las actividades militares y la extracción de minerales, prohíbe las explosiones nucleares y la eliminación de residuos nucleares, apoya la investigación científica, y protege la ecozona en el continente. Se encuentran en curso experimentos conducidos por más de 4000 científicos de varias naciones.\"\n"
      ]
     }
    ],
@@ -168,15 +164,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "South America is of type continent\n",
-      "South America is of type subcontinent\n"
+      "Antarctica is of type continent\n",
+      "Antarctica is of type geographic region\n"
      ]
     }
    ],
@@ -252,18 +248,18 @@
      "text": [
       "CoDEx-S has 1827 validation negatives and 1828 test negatives\n",
       "Samples:\n",
-      "  (Antonin Artaud, occupation, novelist)\n",
-      "  (Kid Rock, country of citizenship, Gabon)\n",
-      "  (Oleg Skripka, country of citizenship, Belgium)\n",
-      "  (Robin Gibb, country of citizenship, Argentina)\n",
-      "  (Sudan, official language, Spanish)\n",
+      "  (Demi Lovato, languages spoken, written, or signed, Russian)\n",
+      "  (Albert Einstein, religion, Islam)\n",
+      "  (Milla Jovovich, country of citizenship, Australia)\n",
+      "  (Leipzig, continent, Africa)\n",
+      "  (Joan Baez, genre, soul music)\n",
       "CoDEx-M has 10310 validation negatives and 10311 test negatives\n",
       "Samples:\n",
-      "  (Alicia Keys, languages spoken, written, or signed, Russian)\n",
-      "  (Adam Resurrected, country of origin, Switzerland)\n",
-      "  (Karl Bechert, educated at, University of Marburg)\n",
-      "  (Norman Mailer, languages spoken, written, or signed, Japanese)\n",
-      "  (David Mamet, occupation, journalist)\n"
+      "  (Renato Carosone, place of birth, Genoa)\n",
+      "  (Ruzena Bajcsy, country of citizenship, Canada)\n",
+      "  (Wladimir Nikolajewitsch Pawlow, country of citizenship, Germany)\n",
+      "  (Sharon Van Etten, field of work, computer science)\n",
+      "  (Alexander Emanuel Agassiz, occupation, mathematician)\n"
      ]
     }
    ],
@@ -708,23 +704,23 @@
      "output_type": "stream",
      "text": [
       "----------CoDEx-S----------\n",
-      "  sibling (P3373) | 100.00% symmetry | 0.268% of CoDEx-S\n",
-      "  diplomatic relation (P530) | 97.08% symmetry | 16.890% of CoDEx-S\n",
       "  spouse (P26) | 98.46% symmetry | 0.178% of CoDEx-S\n",
       "  unmarried partner (P451) | 78.26% symmetry | 0.126% of CoDEx-S\n",
+      "  sibling (P3373) | 100.00% symmetry | 0.268% of CoDEx-S\n",
+      "  diplomatic relation (P530) | 97.08% symmetry | 16.890% of CoDEx-S\n",
       "Symmetric relations > 0.5 make up 17.46% of CoDEx-S\n",
       "----------CoDEx-M----------\n",
-      "  sibling (P3373) | 98.09% symmetry | 0.381% of CoDEx-M\n",
-      "  diplomatic relation (P530) | 97.06% symmetry | 3.019% of CoDEx-M\n",
       "  spouse (P26) | 97.00% symmetry | 0.420% of CoDEx-M\n",
       "  unmarried partner (P451) | 83.97% symmetry | 0.191% of CoDEx-M\n",
+      "  sibling (P3373) | 98.09% symmetry | 0.381% of CoDEx-M\n",
+      "  diplomatic relation (P530) | 97.06% symmetry | 3.019% of CoDEx-M\n",
       "Symmetric relations > 0.5 make up 4.01% of CoDEx-M\n",
       "----------CoDEx-L----------\n",
-      "  shares border with (P47) | 90.36% symmetry | 1.321% of CoDEx-L\n",
-      "  sibling (P3373) | 76.53% symmetry | 0.471% of CoDEx-L\n",
-      "  diplomatic relation (P530) | 96.80% symmetry | 1.026% of CoDEx-L\n",
       "  spouse (P26) | 89.23% symmetry | 0.358% of CoDEx-L\n",
       "  unmarried partner (P451) | 79.70% symmetry | 0.109% of CoDEx-L\n",
+      "  sibling (P3373) | 76.53% symmetry | 0.471% of CoDEx-L\n",
+      "  diplomatic relation (P530) | 96.80% symmetry | 1.026% of CoDEx-L\n",
+      "  shares border with (P47) | 90.36% symmetry | 1.321% of CoDEx-L\n",
       "Symmetric relations > 0.5 make up 3.29% of CoDEx-L\n"
      ]
     }
@@ -805,35 +801,33 @@
       "Average confidence: 0.630\n",
       "n pos / n triples: 10.09%\n",
       "Examples:\n",
-      "  spouse/record label -> record label (confidence 0.269)\n",
-      "  employer/country/ethnic group -> ethnic group (confidence 0.800)\n",
+      "  religion/practiced by -> ethnic group (confidence 0.667)\n",
+      "  employer/headquarters location/country -> country of citizenship (confidence 0.286)\n",
       "----------CoDEx-M----------\n",
       "44 paths in CoDEx-M\n",
       "Average confidence: 0.556\n",
       "n pos / n triples: 16.55%\n",
       "Examples:\n",
-      "  spouse/country of citizenship -> country of citizenship (confidence 0.661)\n",
-      "  named after/member of/location of formation -> location of formation (confidence 1.000)\n",
+      "  located in the administrative terroritorial entity/part of -> located in the administrative terroritorial entity (confidence 0.143)\n",
+      "  cast member/record label/location of formation -> country of origin (confidence 0.114)\n",
       "----------CoDEx-L----------\n",
       "93 paths in CoDEx-L\n",
       "Average confidence: 0.459\n",
       "n pos / n triples: 31.84%\n",
       "Examples:\n",
-      "  country/capital -> capital (confidence 0.165)\n",
-      "  place of burial/country/capital -> place of burial (confidence 0.114)\n"
+      "  airline hub/located in the administrative terroritorial entity -> location of formation (confidence 0.155)\n",
+      "  cast member/place of birth/official language -> language of work or name (confidence 0.367)\n"
      ]
     }
    ],
    "source": [
-    "amie_dir = 'paths/'\n",
-    "\n",
     "for size in sizes:\n",
     "    codex = Codex(size=size)\n",
     "    name = codex.name()\n",
     "    print('----------' + name + '----------')\n",
     "    \n",
     "    rule_df = pd.read_csv(\n",
-    "        os.path.join('paths', 'codex-{}.tsv'.format(size)), sep='\\t'\n",
+    "        os.path.join('paths', 'codex-{}'.format(size), 'paths.tsv'), sep='\\t'\n",
     "    )\n",
     "        \n",
     "    # Count number of paths in this core\n",
