--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -248,18 +248,18 @@
      "text": [
       "CoDEx-S has 1827 validation negatives and 1828 test negatives\n",
       "Samples:\n",
-      "  (Demi Lovato, languages spoken, written, or signed, Russian)\n",
-      "  (Albert Einstein, religion, Islam)\n",
-      "  (Milla Jovovich, country of citizenship, Australia)\n",
-      "  (Leipzig, continent, Africa)\n",
-      "  (Joan Baez, genre, soul music)\n",
+      "  (Marvin Gaye, country of citizenship, Canada)\n",
+      "  (Bernard-Henri Lévy, occupation, film actor)\n",
+      "  (Lenny Kravitz, country of citizenship, Italy)\n",
+      "  (Wole Soyinka, languages spoken, written, or signed, Hungarian)\n",
+      "  (Michael Mann, religion, Catholicism)\n",
       "CoDEx-M has 10310 validation negatives and 10311 test negatives\n",
       "Samples:\n",
-      "  (Renato Carosone, place of birth, Genoa)\n",
-      "  (Ruzena Bajcsy, country of citizenship, Canada)\n",
-      "  (Wladimir Nikolajewitsch Pawlow, country of citizenship, Germany)\n",
-      "  (Sharon Van Etten, field of work, computer science)\n",
-      "  (Alexander Emanuel Agassiz, occupation, mathematician)\n"
+      "  (George Henschel, country of citizenship, India)\n",
+      "  (Walt Disney Records, founded by, Corbin Bleu)\n",
+      "  (Chimamanda Ngozi Adichie, languages spoken, written, or signed, Korean)\n",
+      "  (Eight Men Out, cast member, Steve Buscemi)\n",
+      "  (Renato Carosone, place of birth, Bucharest)\n"
      ]
     }
    ],
@@ -719,8 +719,8 @@
       "  spouse (P26) | 89.23% symmetry | 0.358% of CoDEx-L\n",
       "  unmarried partner (P451) | 79.70% symmetry | 0.109% of CoDEx-L\n",
       "  sibling (P3373) | 76.53% symmetry | 0.471% of CoDEx-L\n",
-      "  diplomatic relation (P530) | 96.80% symmetry | 1.026% of CoDEx-L\n",
       "  shares border with (P47) | 90.36% symmetry | 1.321% of CoDEx-L\n",
+      "  diplomatic relation (P530) | 96.80% symmetry | 1.026% of CoDEx-L\n",
       "Symmetric relations > 0.5 make up 3.29% of CoDEx-L\n"
      ]
     }
@@ -801,22 +801,22 @@
       "Average confidence: 0.630\n",
       "n pos / n triples: 10.09%\n",
       "Examples:\n",
-      "  religion/practiced by -> ethnic group (confidence 0.667)\n",
-      "  employer/headquarters location/country -> country of citizenship (confidence 0.286)\n",
+      "  spouse/record label -> record label (confidence 0.269)\n",
+      "  employer/country/official language -> languages spoken, written, or signed (confidence 0.389)\n",
       "----------CoDEx-M----------\n",
       "44 paths in CoDEx-M\n",
       "Average confidence: 0.556\n",
       "n pos / n triples: 16.55%\n",
       "Examples:\n",
-      "  located in the administrative terroritorial entity/part of -> located in the administrative terroritorial entity (confidence 0.143)\n",
-      "  cast member/record label/location of formation -> country of origin (confidence 0.114)\n",
+      "  place of death/official language -> languages spoken, written, or signed (confidence 0.818)\n",
+      "  spouse/country of citizenship/official language -> languages spoken, written, or signed (confidence 0.456)\n",
       "----------CoDEx-L----------\n",
       "93 paths in CoDEx-L\n",
       "Average confidence: 0.459\n",
       "n pos / n triples: 31.84%\n",
       "Examples:\n",
-      "  airline hub/located in the administrative terroritorial entity -> location of formation (confidence 0.155)\n",
-      "  cast member/place of birth/official language -> language of work or name (confidence 0.367)\n"
+      "  located in the administrative terroritorial entity/capital -> capital (confidence 0.131)\n",
+      "  capital/part of/diplomatic relation -> diplomatic relation (confidence 1.000)\n"
      ]
     }
    ],
