--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -219,6 +222,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "import logging\n",
+    "logging.getLogger('matplotlib.font_manager').disabled = True\n",
     "\n",
     "# Styles from https://scentellegher.github.io/visualization/2018/10/10/beautiful-bar-plots-matplotlib.html\n",
     "\n",
@@ -609,13 +615,6 @@
     "            '(confidence {:.3f})'.format(conf)\n",
     "        )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
