--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from codex.data import Codex"
+    "from codex.codex import Codex"
    ]
   },
   {
