--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -88,8 +88,8 @@
    "outputs": [],
    "source": [
     "codex = Codex(code='en')\n",
-    "print('From {}:'.format(codex.entity_wikipedia_url(eid)))\n",
-    "print('  \"{}\"'.format(codex.entity_extract(eid)))"
+    "print(f'From {codex.entity_wikipedia_url(eid)}:')\n",
+    "print(f'  \"{codex.entity_extract(eid)}\"')"
    ]
   },
   {
@@ -118,8 +118,8 @@
    "outputs": [],
    "source": [
     "type_id = 'Q5'\n",
-    "print('From {}:'.format(codex.entity_type_wikipedia_url(type_id)))\n",
-    "print(' ', codex.entity_type_extract(type_id))"
+    "print(f'From {codex.entity_type_wikipedia_url(type_id)}:')\n",
+    "print(f' \"{codex.entity_type_extract(type_id)}\"')"
    ]
   },
   {
@@ -165,8 +165,7 @@
     "    sample = test_neg.sample(n=5)\n",
     "\n",
     "    for h, r, t in zip(sample['head'], sample['relation'], sample['tail']):\n",
-    "        print('  ({}, {}, {})'.format(\n",
-    "            codex.entity_label(h), codex.relation_label(r), codex.entity_label(t)))"
+    "        print(f'  ({codex.entity_label(h)}, {codex.relation_label(r)}, {codex.entity_label(t)})')"
    ]
   },
   {
@@ -314,7 +313,7 @@
     "    ax.set_yscale('symlog')\n",
     "    \n",
     "    ax.set_xlabel('Entity degree', fontsize=14)\n",
-    "    ax.set_ylabel(r'Cumulative count', fontsize=12)\n",
+    "    ax.set_ylabel('Cumulative count', fontsize=12)\n",
     "    \n",
     "    ax.tick_params(\n",
     "        which='both',\n",
@@ -531,20 +530,14 @@
     "        \n",
     "        if symmetry > threshold:\n",
     "            print(\n",
-    "                '  {} ({}) | {:.2f}% symmetry | {:.3f}% of {}'.format(\n",
-    "                    codex.relation_label(relation), \n",
-    "                    relation,\n",
-    "                    symmetry * 100,\n",
-    "                    percent * 100,\n",
-    "                    codex.name()\n",
-    "                )\n",
+    "                f'  {codex.relation_label(relation)} ({relation})', \n",
+    "                f'| {symmetry * 100:.2f}% symmetry', \n",
+    "                f'| {percent * 100:.3f}% of {codex.name()}'\n",
     "            )\n",
     "            \n",
     "            tot += (percent * 100)\n",
     "                \n",
-    "    print('Symmetric relations > {:.1f} make up {:.2f}% of {}'.format(\n",
-    "        threshold, tot, codex.name()\n",
-    "    ))"
+    "    print(f'Symmetric relations > {threshold:.1f} make up {tot:.2f}% of {codex.name()}')"
    ]
   },
   {
@@ -585,7 +578,7 @@
     "    print('----------' + name + '----------')\n",
     "    \n",
     "    rule_df = pd.read_csv(\n",
-    "        os.path.join('analysis/paths', 'codex-{}'.format(size), 'paths.tsv'), sep='\\t'\n",
+    "        os.path.join('analysis/paths', f'codex-{size}', 'paths.tsv'), sep='\\t'\n",
     "    )\n",
     "        \n",
     "    # Count number of paths in this core\n",
@@ -593,11 +586,15 @@
     "    print(\n",
     "        len(rule_df), 'paths in', name\n",
     "    )\n",
-    "    print('Average confidence: {:.3f}'.format(\n",
-    "        rule_df['PCA Confidence'].mean()))\n",
-    "    print('n pos / n triples: {:.2f}%'.format(\n",
-    "        np.sum(np.multiply(rule_df['Positive Examples'], rule_df['Length'])) / len(codex.triples()) * 100\n",
-    "    ))\n",
+    "    \n",
+    "    avg_conf = rule_df['PCA Confidence'].mean()\n",
+    "    print(f'Average confidence: {avg_conf:.3f}')\n",
+    "    \n",
+    "    frac_of_total = (\n",
+    "        np.sum(np.multiply(rule_df['Positive Examples'], rule_df['Length'])) / \n",
+    "        len(codex.triples()) * 100\n",
+    "    )\n",
+    "    print(f'n pos / n triples: {frac_of_total:.2f}%')\n",
     "        \n",
     "    # Print a few examples\n",
     "    print('Examples:')\n",
@@ -612,9 +609,16 @@
     "            '/'.join([codex.relation_label(relation) for relation in relations[:-1]]), \n",
     "            '->', \n",
     "            codex.relation_label(relations[-1]),\n",
-    "            '(confidence {:.3f})'.format(conf)\n",
+    "            f'(confidence {conf:.3f})'\n",
     "        )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
