--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -154,7 +154,10 @@
    "source": [
     "for size in ('s', 'm'):\n",
     "    codex = Codex(size=size)\n",
-    "    valid_neg, test_neg = codex.negative_split('valid'), codex.negative_split('test')\n",
+    "    valid_neg, test_neg = (\n",
+    "        codex.negative_split('valid'),\n",
+    "        codex.negative_split('test')\n",
+    "    )\n",
     "    print(\n",
     "        codex.name(), 'has', \n",
     "        len(valid_neg), 'validation negatives and',\n",
@@ -164,8 +167,12 @@
     "    print('Samples:')\n",
     "    sample = test_neg.sample(n=5)\n",
     "\n",
-    "    for h, r, t in zip(sample['head'], sample['relation'], sample['tail']):\n",
-    "        print(f'  ({codex.entity_label(h)}, {codex.relation_label(r)}, {codex.entity_label(t)})')"
+    "    rows = [(tuple(row)) for row in sample.values]\n",
+    "    for h, r, t in rows:\n",
+    "        print(' ',\n",
+    "              f'({codex.entity_label(h)},',\n",
+    "              f'{codex.relation_label(r)},', \n",
+    "              f'{codex.entity_label(t)})')"
    ]
   },
   {
@@ -181,8 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def triples_to_set(triples):\n",
-    "    return set(zip(triples['head'], triples['relation'], triples['tail']))"
+    "# def triples_to_set(triples):\n",
+    "#     return set(zip(triples['head'], triples['relation'], triples['tail']))"
    ]
   },
   {
@@ -191,16 +198,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_triples = triples_to_set(pd.concat(\n",
-    "    [Codex(size=size).triples() for size in sizes]))\n",
+    "all_triples = {tuple(row) for row in pd.concat(\n",
+    "    [Codex(size=size).triples() for size in sizes]).values}\n",
     "    \n",
     "for size in ('s', 'm'):\n",
     "    codex = Codex(size=size)\n",
-    "    valid_neg, test_neg = codex.negative_split('valid'), codex.negative_split('test')\n",
-    "    negs = triples_to_set(pd.concat((valid_neg, test_neg)))\n",
+    "    valid_neg, test_neg = (\n",
+    "        codex.negative_split('valid'),\n",
+    "        codex.negative_split('test')\n",
+    "    )\n",
     "    \n",
-    "    for neg in negs:\n",
-    "        assert neg not in all_triples\n",
+    "    for neg_triples in (valid_neg, test_neg):\n",
+    "        neg_triples = {tuple(row) for row in neg_triples.values}\n",
+    "        assert not len(neg_triples.intersection(all_triples))\n",
     "        \n",
     "print('Passed all checks successfully')"
    ]
@@ -245,7 +255,7 @@
     "    plt.rcParams[key] = dark_grey\n",
     "\n",
     "palette = sns.color_palette('RdBu', 10)\n",
-    "sns.palplot(palette)"
+    "# sns.palplot(palette)"
    ]
   },
   {
@@ -262,24 +272,21 @@
    "outputs": [],
    "source": [
     "def count_entities(triples):\n",
-    "    \"\"\"\n",
-    "    :param triples: pandas DataFrame [head, relation, tail]\n",
-    "    :return counts: pandas Dataframe [entity, count]\n",
-    "    \"\"\"\n",
+    "    \"\"\"Get the degree of all entities across train/valid/test\"\"\"\n",
     "    entities = pd.concat((triples['head'], triples['tail']))\n",
-    "    counts = pd.DataFrame(entities.value_counts().reset_index())\n",
-    "    counts.columns = ['entity', 'count']\n",
-    "    return counts\n",
-    "    \n",
-    "    \n",
+    "    df = pd.DataFrame(\n",
+    "        entities.value_counts().reset_index(),\n",
+    "    )\n",
+    "    df.columns = ['entity', 'count']\n",
+    "    return df\n",
+    "\n",
     "def count_relations(triples):\n",
-    "    \"\"\"\n",
-    "    :param triples: pandas DataFrame [head, relation, tail]\n",
-    "    :return counts: pandas Dataframe [relation, count]\n",
-    "    \"\"\"\n",
-    "    counts = pd.DataFrame(triples['relation'].value_counts().reset_index())\n",
-    "    counts.columns = ['relation', 'count']\n",
-    "    return counts"
+    "    \"\"\"Get relation mention counts\"\"\"\n",
+    "    df = pd.DataFrame(\n",
+    "        triples['relation'].value_counts().reset_index(),\n",
+    "    )\n",
+    "    df.columns = ['relation', 'count']\n",
+    "    return df"
    ]
   },
   {
@@ -291,14 +298,8 @@
     "def plot_degree_distribution(\n",
     "        triples, step=5, ax=None, \n",
     "        figsize=(5,3), **kwargs):\n",
-    "    \"\"\"\n",
-    "    :param triples:\n",
-    "    :param step:\n",
-    "    :param ax:\n",
-    "    :param figsize:\n",
-    "    :param kwargs:\n",
-    "    :return:\n",
-    "    \"\"\"\n",
+    "    \"\"\"Plot the degree distribution of all entities\n",
+    "    in a set of triples\"\"\"\n",
     "    counts = count_entities(triples)['count']\n",
     "    \n",
     "    x = np.arange(0, max(counts), step)\n",
@@ -406,7 +407,7 @@
     "    )\n",
     "    \n",
     "    ax.plot(\n",
-    "        y, x, \"o\", \n",
+    "        y, x, 'o', \n",
     "        markersize=7, \n",
     "        color=color, \n",
     "        alpha=0.6)\n",
@@ -437,7 +438,8 @@
     "triples = codex.triples()\n",
     "count_df = count_entities(triples)\n",
     "\n",
-    "count_df['label'] = [codex.entity_label(eid) for eid in count_df['entity']]\n",
+    "count_df['label'] = [\n",
+    "    codex.entity_label(eid) for eid in count_df['entity']]\n",
     "\n",
     "k = 30\n",
     "\n",
@@ -464,7 +466,8 @@
    "outputs": [],
    "source": [
     "count_df = count_relations(triples)\n",
-    "count_df['label'] = [codex.relation_label(rid) for rid in count_df['relation']]\n",
+    "count_df['label'] = [\n",
+    "    codex.relation_label(rid) for rid in count_df['relation']]\n",
     "\n",
     "k = 15\n",
     "\n",
@@ -499,6 +502,7 @@
    "outputs": [],
    "source": [
     "def entity_pairs(triples, reverse=False):\n",
+    "    \"\"\"Get all unique head/tail entity pairs in a set of triples\"\"\"\n",
     "    col1, col2 = 'head', 'tail'\n",
     "    if reverse:\n",
     "        col1, col2 = col2, col1\n",
