--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -301,6 +301,7 @@
     "    \"\"\"Plot the degree distribution of all entities\n",
     "    in a set of triples\"\"\"\n",
     "    counts = count_entities(triples)['count']\n",
+    "    print(f'Average degree: {counts.mean():.2f}')\n",
     "    \n",
     "    x = np.arange(0, max(counts), step)\n",
     "    y = [len(counts[counts > val]) for val in x]\n",
