Add Colab instructions

--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -1,6 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To [run this notebook remotely on Google's Colab platform](https://colab.research.google.com/github/tsafavi/codex/blob/master/Explore%20CoDEx.ipynb), uncomment and run the lines in the following cell: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !git clone https://github.com/tsafavi/codex\n",
+    "# %cd codex\n",
+    "# !./extract.sh en  # unzip all KG text in English\n",
+    "# !pip install -r codex/requirements.txt\n",
+    "# !pip install -e codex/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're running on Colab, you will need to restart the runtime after running the previous cell."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -632,7 +659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
