Add Colab instructions

--- a/Explore CoDEx.ipynb
+++ b/Explore CoDEx.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To [run this notebook remotely on Google's Colab platform](https://colab.research.google.com/github/tsafavi/codex/blob/master/Explore%20CoDEx.ipynb), uncomment and run the lines in the following cell: "
+    "If you're running this notebook locally on your own machine, you can ignore the following cell. If you want to [run this notebook remotely on Google's Colab platform](https://colab.research.google.com/github/tsafavi/codex/blob/master/Explore%20CoDEx.ipynb), uncomment and run the lines in the following cell: "
    ]
   },
   {
@@ -16,8 +16,8 @@
     "# !git clone https://github.com/tsafavi/codex\n",
     "# %cd codex\n",
     "# !./extract.sh en  # unzip all KG text in English\n",
-    "# !pip install -r codex/requirements.txt\n",
-    "# !pip install -e codex/"
+    "# !pip install -r requirements.txt\n",
+    "# !pip install -e ."
    ]
   },
   {
